Cacti CHANGELOG

0.8.6j
-bug#0000883: Exploit in cmd.php with register globals enabled in php
-bug#0000848: Poller[0] ERROR: PHP Script Server communications lost.
-bug#0000870: Change Graph Template: Template list not sorted
-bug#0000882: Add "collapsable" brances in the graph trees view

0.8.6i
-bug#0000188: Add ability to sort columns by selecting column headers.
-bug#0000199: Exported thumbnail graphics shows limited time range only.
-bug#0000207: Correct unit size displayed in the default 'Localhost - Memory Usage' graph.
-bug#0000286: Fix issue with bandwidth summation on exported graphs.
-bug#0000313/#0000561: Don't print menu/titlebar by using CSS class noprint.
-bug#0000316: Take the unit value field into account when creating graphs.
-bug#0000395: Fix graph export FTP functionality in Unix environments.
-bug#0000430: Add natural sort order option for graph trees.
-bug#0000433: Remove script server restriction on varying case path names.
-bug#0000488: Remove reliance on HTTP_USER_AGENT to prevent possible notices.
-bug#0000527: Fix issue updating the RRA for a graph tree item.
-bug#0000584: Add barometer decimal fix to scripts/weatherbug.pl.
-bug#0000624: Generate DEFs for graph items other than AREA, STACK, and LINE.
-bug#0000643: Always display a human readable sysUpTime in the device edit page.
-bug#0000665: Invalid index error on empty or 0 return set from rrdfetch with Nth Percentile.
-bug#0000672: When creating a device, the Host Template was not properly validated.
-bug#0000678: Allow graph export to a Cacti sub directory.
-bug#0000681: Increase the size of the arg1, arg2, and arg3 fields in the poller_item table.
-bug#0000692: Fix problems with FTP and the tree export method.
-bug#0000693: Fix problems with the "Expand Host" option and the tree export method.
-bug#0000698: Make arguments to 'df' more compatible with FreeBSD 6.0 in the "Get Unix Partitions" data query.